Opened 2 years ago

Closed 4 months ago

#18140 closed bug (fixed)

Panic when booting with 150GB of memory

Reported by: Coldfirex Owned by: nobody
Priority: normal Milestone: R1/beta6
Component: System/Kernel Version: R1/beta4
Keywords: Cc:
Blocked By: #14659 Blocking:
Platform: All

Description (last modified by Coldfirex)

I was testing the latest Beta4-tc0+updates (hrev56578+54) and booting fine with 128GB within vmware (no tools installed). I changed to 256GB and no icons would light up. Same for 160gb. I set to 150GB and got a panic:

PANIC: initializing DMAResource failed: Out of memory

I was able to type 'continue' about four times before it stopped updated the screen. On the last one the rocket icon turned red.

Interestingly the panic only occurs when the installer ISO is mounted on boot. If disconnected then no icons light up.

Attachments (11)

Screenshot 2022-12-14 171204.png (53.4 KB ) - added by Coldfirex 2 years ago.
Panic
syslog-ISO-boot.txt (198.2 KB ) - added by Coldfirex 2 years ago.
syslog-No-ISO.txt (308.3 KB ) - added by Coldfirex 2 years ago.
syslog-57247.txt (12.6 KB ) - added by Coldfirex 18 months ago.
syslog-256gb.txt (10.0 KB ) - added by Coldfirex 4 months ago.
syslog-160gb.txt (506.9 KB ) - added by Coldfirex 4 months ago.
160gb-Screenshot 2024-10-14 114611.jpg (99.1 KB ) - added by Coldfirex 4 months ago.
syslog-58239-256gb.txt (10.0 KB ) - added by Coldfirex 4 months ago.
syslog-58239-160gb.txt (10.2 KB ) - added by Coldfirex 4 months ago.
syslog-58241-256gb.txt (10.0 KB ) - added by Coldfirex 4 months ago.
syslog-58241-160gb.txt (487.4 KB ) - added by Coldfirex 4 months ago.

Download all attachments as: .zip

Change History (29)

by Coldfirex, 2 years ago

Panic

comment:1 by Coldfirex, 2 years ago

Description: modified (diff)

comment:2 by Coldfirex, 2 years ago

Description: modified (diff)

comment:3 by Coldfirex, 2 years ago

Description: modified (diff)

comment:4 by waddlesplash, 2 years ago

Please try with a nightly build, enable serial output in VMware settings, and upload the serial log here.

comment:5 by Coldfirex, 2 years ago

hrev56645 syslog booting off of ISO with VM set to 150GB ram.

by Coldfirex, 2 years ago

Attachment: syslog-ISO-boot.txt added

comment:6 by waddlesplash, 2 years ago

Component: - GeneralSystem/Kernel
DMAResource@0xffffffff8081dbe8: low/high 0/100000000, max segment count 512, align 2, boundary 65536, max transfer 131072, max segment size 33554432
slab memory manager: created area 0xffffffff8d001000 (1031)
vm_page_allocate_page_run(): Failed to allocate run of length 4 (0 1048320) in second iteration (align: 2 boundary: 65536)!

comment:7 by Coldfirex, 2 years ago

hrev56645 syslog normal boot with VM set to 150GB ram. No icons lit up and no onscreen panic.

by Coldfirex, 2 years ago

Attachment: syslog-No-ISO.txt added

comment:8 by Coldfirex, 18 months ago

Updated syslog from 57247 with a different error now.

PANIC: error allocating early page!

by Coldfirex, 18 months ago

Attachment: syslog-57247.txt added

comment:9 by waddlesplash, 5 months ago

Blocked By: 14659 added

comment:10 by waddlesplash, 5 months ago

Please retest after hrev58212.

comment:11 by Coldfirex, 4 months ago

256gb and 160gb both still fail at least.

by Coldfirex, 4 months ago

Attachment: syslog-256gb.txt added

by Coldfirex, 4 months ago

Attachment: syslog-160gb.txt added

comment:12 by waddlesplash, 4 months ago

Please retest after hrev58238.

by Coldfirex, 4 months ago

Attachment: syslog-58239-256gb.txt added

comment:13 by Coldfirex, 4 months ago

160 and 256gb no boot on 58239. No KDL. No icons light up.

by Coldfirex, 4 months ago

Attachment: syslog-58239-160gb.txt added

comment:14 by Coldfirex, 4 months ago

With hrev58239 the max memory that is accepted is now 99GB. Anything above leads to no icons lighting up.

Last edited 4 months ago by Coldfirex (previous) (diff)

comment:15 by waddlesplash, 4 months ago

Should be fixed in hrev58240.

comment:16 by Coldfirex, 4 months ago

Back to the behavior from earlier this week. 256gb - no icons light up. 160gb - onscreen kdls. able to type continue a few times, which gets the rocket icon lit up, then hard freeze with boot icons still on the screen.

by Coldfirex, 4 months ago

Attachment: syslog-58241-256gb.txt added

by Coldfirex, 4 months ago

Attachment: syslog-58241-160gb.txt added

comment:17 by Coldfirex, 4 months ago

160GB now works on hrev58244!

200GB works!

201GB lights up the rocket icon then stops updating.

205GB+ doesnt light up any icons.

comment:18 by waddlesplash, 4 months ago

Milestone: UnscheduledR1/beta6
Resolution: fixed
Status: newclosed

Well, if 150GB works, then I think we can close this ticket as fixed at least, and other problems belong in new tickets.

I would be interested in the syslog from 201GB. The 205+GB problem is the same as before it appears.

Note: See TracTickets for help on using tickets.