kernel/vm: Fix allocating virtual ranges downwards from the bottom.

Another regression from hrev58236: the code assigned start then size
previously, but there was another temporary that made things work
properly that was removed in that commit.

Fixes #18140.